@@ -1,5 +1,5 @@
 /************************************************************************************************************
- * Copyright (c) 2007, 2015 Matthew Hall and others.
+ * Copyright (c) 2007, 2009 Matthew Hall and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -10,7 +10,6 @@
  * 		IBM Corporation - initial API and implementation
  * 		Brad Reynolds - initial API and implementation (through bug 116920 and bug 147515)
  * 		Matthew Hall - bugs 211786, 274081
- * 		Stefan Xenos <sxenos@gmail.com> - Bug 335792
  ***********************************************************************************************************/
 package org.eclipse.core.databinding.observable.list;
 
@@ -45,7 +44,7 @@ import org.eclipse.core.databinding.observable.value.IObservableValue;
  *
  * <pre>
  * final IObservableValue count = WritableValue.withValueType(Integer.TYPE);
- * count.setValue(Integer.valueOf(0));
+ * count.setValue(new Integer(0));
  * IObservableList fibonacci = new ComputedList() {
  * 	protected List calculate() {
  * 		int size = ((Integer) count.getValue()).intValue();
@@ -53,13 +52,13 @@ import org.eclipse.core.databinding.observable.value.IObservableValue;
  * 		List result = new ArrayList();
  * 		for (int i = 0; i &lt; size; i++) {
  * 			if (i == 0)
- * 				result.add(Integer.valueOf(0));
+ * 				result.add(new Integer(0));
  * 			else if (i == 1)
- * 				result.add(Integer.valueOf(1));
+ * 				result.add(new Integer(1));
  * 			else {
  * 				Integer left = (Integer) result.get(i - 2);
  * 				Integer right = (Integer) result.get(i - 1);
- * 				result.add(Integer.valueOf(left.intValue() + right.intValue()));
+ * 				result.add(new Integer(left.intValue() + right.intValue()));
  * 			}
  * 		}
  * 		return result;
@@ -68,17 +67,14 @@ import org.eclipse.core.databinding.observable.value.IObservableValue;
  *
  * System.out.println(fibonacci); // =&gt; &quot;[]&quot;
  *
- * count.setValue(Integer.valueOf(5));
+ * count.setValue(new Integer(5));
  * System.out.println(fibonacci); // =&gt; &quot;[0, 1, 1, 2, 3]&quot;
  * </pre>
  *
- * @param <E>
- *            the list element type
- *
  * @since 1.1
  */
-public abstract class ComputedList<E> extends AbstractObservableList<E> {
-	private List<E> cachedList = new ArrayList<E>();
+public abstract class ComputedList extends AbstractObservableList {
+	private List cachedList = new ArrayList();
 
 	private boolean dirty = true;
 	private boolean stale = false;
@@ -184,17 +180,17 @@ public abstract class ComputedList<E> extends AbstractObservableList<E> {
 	}
 
 	@Override
-	public E get(int index) {
+	public Object get(int index) {
 		getterCalled();
 		return doGetList().get(index);
 	}
 
-	private final List<E> getList() {
+	private final List getList() {
 		getterCalled();
 		return doGetList();
 	}
 
-	final List<E> doGetList() {
+	final List doGetList() {
 		if (dirty) {
 			// This line will do the following:
 			// - Run the calculate method
@@ -240,7 +236,7 @@ public abstract class ComputedList<E> extends AbstractObservableList<E> {
 	 *
 	 * @return the object's list.
 	 */
-	protected abstract List<E> calculate();
+	protected abstract List calculate();
 
 	private void makeDirty() {
 		if (!dirty) {
@@ -251,19 +247,18 @@ public abstract class ComputedList<E> extends AbstractObservableList<E> {
 			stopListening();
 
 			// copy the old list
-			final List<E> oldList = new ArrayList<E>(cachedList);
+			final List oldList = new ArrayList(cachedList);
 			// Fire the "dirty" event. This implementation recomputes the new
 			// list lazily.
-			fireListChange(new ListDiff<E>() {
-				List<ListDiffEntry<E>> differences;
+			fireListChange(new ListDiff() {
+				ListDiffEntry[] differences;
 
 				@Override
-				public ListDiffEntry<E>[] getDifferences() {
+				public ListDiffEntry[] getDifferences() {
 					if (differences == null)
-						return Diffs.computeListDiff(oldList, getList())
+						differences = Diffs.computeListDiff(oldList, getList())
 								.getDifferences();
-					return differences.toArray(new ListDiffEntry[differences
-							.size()]);
+					return differences;
 				}
 			});
 		}
@@ -309,7 +304,7 @@ public abstract class ComputedList<E> extends AbstractObservableList<E> {
 	}
 
 	@Override
-	public synchronized void addListChangeListener(IListChangeListener<? super E> listener) {
+	public synchronized void addListChangeListener(IListChangeListener listener) {
 		super.addListChangeListener(listener);
 		// If somebody is listening, we need to make sure we attach our own
 		// listeners
